--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,10 @@
         "display.h": "c",
         "colors.h": "c",
         "screen.h": "c",
-        "kernel.h": "c"
+        "kernel.h": "c",
+        "cpuid.h": "c",
+        "memory_info.h": "c",
+        "power.h": "c",
+        "disk.h": "c"
     }
 }
