--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "cpuid.h": "c",
         "memory_info.h": "c",
         "power.h": "c",
-        "disk.h": "c"
+        "disk.h": "c",
+        "cstring": "c"
     }
 }
