--- a/Makefile2
+++ b/Makefile2
@@ -1,34 +1,26 @@
-# $@ = target file
-# $< = first dependency
-# $^ = all dependencies
-
-# detect all .o files based on their .c source
 C_SOURCES = $(wildcard kernel/*.c cpu/*.c kernel/sys/*.c)
 HEADERS = $(wildcard kernel/*.h cpu/*.h kernel/sys/*.h)
-OBJ_FILES = ${C_SOURCES:.c=.o cpu/interrupt.o}
+OBJ_FILES = ${C_SOURCES:.c=.o}
 
-# First rule is the one executed when no parameters are fed to the Makefile
 all: run
 
-# Notice how dependencies are built as needed
 kernel.bin: boot/kernel_entry.o ${OBJ_FILES}
-	x86_64-elf-ld -m elf_i386 -o $@ -Ttext 0x1000 $^ --oformat binary
+	x86_64-elf-ld -m elf_i386 -o $@ -Ttext 0x1000 $^ cpu/interrupt.o --oformat binary
 
 os-image.bin: boot/mbr.bin kernel.bin
 	cat $^ > $@
 
 run: os-image.bin
-	qemu-system-i386 -fda $<
+	qemu-system-i386 -m 2048 -fda $<
 
 echo: os-image.bin
 	xxd $<
 
-# only for debug
 kernel.elf: boot/kernel_entry.o ${OBJ_FILES}
 	x86_64-elf-ld -m elf_x86_64 -o $@ -Ttext 0x1000 $^
 
 debug: os-image.bin kernel.elf
-	qemu-system-i386 -s -S -fda os-image.bin -d guest_errors,int &
+	qemu-system-i386 -m 2048 -s -S -fda os-image.bin -d guest_errors,int &
 	x86_64-elf-gdb -ex "target remote localhost:1234" -ex "symbol-file kernel.elf"
 
 %.o: %.c ${HEADERS}
